--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "webpack-dev-server": "^2.9.3"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "bootstrap": "^3.3.7",
     "mint-ui": "^2.2.9",
     "vue": "^2.5.2",
+    "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1"
   }
 }
